--- a/components/indoor_offline_tags_info.html
+++ b/components/indoor_offline_tags_info.html
@@ -35,48 +35,35 @@
             <md-list>
                 <md-list-item class="md-2-line">
                     <img src="img/icons/tags/online_tag_24.png" class="md-avatar" alt="{{lang.onlineTags}}"
-                         title="{{lang.onlineTags}}">
+                         title="{{lang.offlineTags}}">
                     <div class="md-list-item-text" layout="column">
-                        <h3>{{lang.onlineTags}}: <b class="color-green">{{tagsStateIndoor.online}}</b></h3>
-                        <h4 class="color-green">{{ tagsStateIndoor.online }} {{lang.areOnlineTags | lowercase}}</h4>
+                        <h3>{{lang.onlineTags}}: <b class="color-green">{{tagsStateIndoorOnline}}</b></h3>
+                        <h4 class="color-green">{{ tagsStateIndoorOnline }} {{lang.areOnlineTags | lowercase}}</h4>
                     </div>
                 </md-list-item>
                 <md-list-item class="md-3-line">
                     <img src="img/icons/tags/offline_tag_24.png" class="md-avatar" alt="{{lang.offlineTags}}"
                          title="{{lang.offlineTags}}">
                     <div class="md-list-item-text" layout="column">
-                        <h3>{{lang.offlineTags}}: <b class="color-darkgray">{{ tagsStateIndoor.offGrid }}</b></h3>
-                        <h4 class="color-darkgray">{{ tagsStateIndoor.offGrid }} {{lang.areOfflineTags | lowercase}}</h4>
-                        <md-select ng-if="offlineTagsIndoor.length > 0" ng-model="antani"
+                        <h3>{{lang.offlineTags}}: <b class="color-darkgray">{{ tagsStateOffGrid.length }}</b></h3>
+                        <h4 class="color-darkgray">{{ tagsStateOffGrid.length }} {{lang.areOfflineTags | lowercase}}</h4>
+                        <md-select ng-if="tagsStateOffGrid.length > 0" ng-model="antani"
                                    placeholder="{{lang.offlineTags}}">
-                            <md-option ng-value="tag" ng-disabled="$index + 1" ng-repeat="tag in offgridTags">
+                            <md-option ng-value="tag" ng-disabled="$index + 1" ng-repeat="tag in tagsStateOffGrid track by $index">
                                 <img src="img/icons/offline_tags_alert_grey_24.png" class="margin-right-10-px" alt="{{lang.offlineTags}}" title="{{lang.offlineTags}}"><span class="font-large vertical-align-super">{{tag.name}}</span>
                             </md-option>
                         </md-select>
                     </div>
                 </md-list-item>
-<!--                <md-list-item class="md-2-line">-->
-<!--                    <img src="img/icons/tags/offline_tag_24.png" class="md-avatar" alt="{{lang.lostTags}}"-->
-<!--                         title="{{lang.lostTags}}">-->
-<!--                    <div class="md-list-item-text" layout="column">-->
-<!--                        <h3>{{lang.offlineTags}}: <b class="color-orange">{{tagsStateIndoor.offGrid}}</b></h3>-->
-<!--                        <h4 class="color-orange">{{ tagsStateIndoor.offGrid }} {{lang.areLostTags | lowercase}}</h4>-->
-<!--                        <md-select ng-if="offgridTags.length > 0" ng-model="antani" placeholder="{{lang.lostTags}}">-->
-<!--                            <md-option ng-value="tag" ng-disabled="$index + 1" ng-repeat="tag in offgridTags">-->
-<!--                                <img src="img/icons/offline_tags_alert_24.png" class="margin-right-10-px"><span class="font-large vertical-align-super">{{tag.name}}</span>-->
-<!--                            </md-option>-->
-<!--                        </md-select>-->
-<!--                    </div>-->
-<!--                </md-list-item>-->
                 <md-list-item class="md-2-line">
                     <img src="img/icons/tags/offline_tag_24.png" class="md-avatar" alt="{{lang.shutdownTags}}"
                          title="{{lang.shutdownTags}}">
                     <div class="md-list-item-text" layout="column">
-                        <h3>{{lang.shutdownTags}}: <b class="color-red">{{tagsStateIndoor.offTags}}</b></h3>
-                        <h4 class="color-red">{{ tagsStateIndoor.offTags }} {{lang.areShutdownTags | lowercase}}</h4>
+                        <h3>{{lang.shutdownTags}}: <b class="color-red">{{tagsStateIndoorOffTags.length}}</b></h3>
+                        <h4 class="color-red">{{ tagsStateIndoorOffTags.length }} {{lang.areShutdownTags | lowercase}}</h4>
 
-                        <md-select ng-if="offTags.length > 0" ng-model="antani" placeholder="{{lang.shutdownTags}}">
-                            <md-option ng-value="tag" ng-disabled="$index + 1" ng-repeat="tag in offTags">
+                        <md-select ng-if="tagsStateIndoorOffTags.length > 0" ng-model="antani" placeholder="{{lang.shutdownTags}}">
+                            <md-option ng-value="tag" ng-disabled="$index + 1" ng-repeat="tag in tagsStateIndoorOffTags track by $index">
                                 <img src="img/icons/offline_tags_alert_red_24.png" class="margin-right-10-px" alt="{{lang.offlineTags}}" title="{{lang.offlineTags}}"><span class="font-large vertical-align-super">{{tag.name}}</span>
                             </md-option>
                         </md-select>
