--- a/components/canvas.html
+++ b/components/canvas.html
@@ -104,6 +104,8 @@
         <div layout="row" layout-align="center center" class="background-ottanio width-100 position-absolute top-0">
             <div id='working-zones' class="position-absolute bottom-0 width-100">
             </div>
+            <img ng-show="showPartnerLogo" src="img/icons/rina-canvas-logo.jpg" class="margin-right-50-px"
+                 alt="Smart Track" title="Smart Track">
             <img src="img/icons/login-icon.png" class="canvas-header-image" alt="Smart Track"
                  title="Smart Track">
             <div class="margin-bottom-30-px width-30">
