--- a/components/canvas.html
+++ b/components/canvas.html
@@ -100,6 +100,22 @@
         </div>
         <!--end draw buttoon-->
 
+        <!-- begin categories legend-->
+        <input ng-if="canvasCtrl.showCategoriesButton" type="checkbox" name="toggle" id="toggle" />
+        <label for="toggle" class="top-right-center"></label>
+        <div class="message">
+            <div class="category-title">Categories Legend</div>
+            <ul class="float-left margin-left-6">
+                <li class="category-list-item"><img class="margin-right-50-px" src="img/icons/tags/Colatori.png"> Colatori</li>
+                <li class="category-list-item"><img class="margin-right-50-px" src="img/icons/tags/Esercizio.png"><div>Esercizio</div></li>
+            </ul>
+            <ul class="float-left margin-left-8">
+                <li class="category-list-item"><img class="margin-right-50-px" src="img/icons/tags/Manutentore.png">Manutentore</li>
+                <li class="category-list-item"><img class="margin-right-50-px" src="img/icons/tags/Terzi.png"><div>Terzi</div></li>
+            </ul>
+        </div>
+        <!-- end categories legend-->
+
         <!--header text-->
         <div layout="row" layout-align="center center" class="background-ottanio width-100 position-absolute top-0">
             <div id='working-zones' class="position-absolute bottom-0 width-100">
