--- a/components/canvas.html
+++ b/components/canvas.html
@@ -2,14 +2,14 @@
     <div layout="column" layout-align="center center">
         <div layout="column" class="top-corner">
             <div layout="column" class="background-transparent-gray">
-                <img ng-show="canvasCtrl.showAlarmsIcon" ng-click="showAlarms()" class="pulse-image margin-bottom-5-px padding-top-bottom-6px"
+                <img ng-show="canvasCtrl.showAlarmsIcon" ng-click="showAlarms()" class="pulse-image margin-bottom-5-px padding-top-bottom-6px width-40px"
                      src="img/icons/alarm-icon.png" alt="{{lang.activeAllarms}}" title="{{lang.activeAllarms}}">
-                <img ng-show="canvasCtrl.showOfflineTagsIcon" ng-click="showOfflineTagsIndoor()" class="margin-bottom-5-px padding-top-bottom-6px border-bottom-3-white border-top-3-white"
+                <img ng-show="canvasCtrl.showOfflineTagsIcon" ng-click="showOfflineTagsIndoor()" class="margin-bottom-5-px padding-top-bottom-6px width-40px border-bottom-3-white border-top-3-white"
                      src="img/icons/offline_tags_alert_64.png" alt="{{lang.offlineTags}}" title="{{lang.offlineTags}}">
-                <img ng-show="canvasCtrl.showOfflineAnchorsIcon" ng-click="showOfflineAnchorsIndoor()" class="margin-bottom-5-px padding-top-bottom-6px border-bottom-3-white"
+                <img ng-show="canvasCtrl.showOfflineAnchorsIcon" ng-click="showOfflineAnchorsIndoor()" class="margin-bottom-5-px padding-top-bottom-6px width-40px border-bottom-3-white"
                      src="img/icons/offline_anchors_alert_64.png" alt="{{lang.offlineAnchors}}"
                      title="{{lang.offlineAnchors}}">
-                <img ng-show="canvasCtrl.showEngineOffIcon" class="padding-top-bottom-6px border-bottom-3-white"
+                <img ng-show="canvasCtrl.showEngineOffIcon" class="padding-top-bottom-6px width-40px spin-logo-right-no-absolute"
                      src="img/icons/engine_off_64.png" alt="{{lang.engineOff}}"
                      title="{{lang.engineOff}}">
             </div>
