--- a/css/login.css
+++ b/css/login.css
@@ -36,3 +36,50 @@ CUSTOM
     width: 70px;
     height: 70px;
 }
+
+.align-item-start{
+    align-items: start!important;
+}
+
+.spin-logo-left-3s{
+    position: absolute;
+    -webkit-animation:spin 3s linear infinite;
+    -moz-animation:spin 3s linear infinite;
+    animation:spin 3s linear infinite;
+}
+
+@-moz-keyframes spin { 100% { -moz-transform: rotate(-360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(-360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(-360deg); transform:rotate(-360deg); } }
+
+.spin-logo-right-2s{
+    position: absolute;
+    -webkit-animation:spin-right-2s 2s linear infinite;
+    -moz-animation:spin-right-2s 2s linear infinite;
+    animation:spin-right-2s 2s linear infinite;
+}
+
+@-moz-keyframes spin-right-2s { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin-right-2s { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin-right-2s { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+.spin-logo-right{
+    position: absolute;
+    -webkit-animation:spin-right 4s linear infinite;
+    -moz-animation:spin-right 4s linear infinite;
+    animation:spin-right 4s linear infinite;
+}
+
+@-moz-keyframes spin-right { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin-right { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin-right { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+.spin-logo-right-no-absolute{
+    -webkit-animation:spin-right 4s linear infinite;
+    -moz-animation:spin-right 4s linear infinite;
+    animation:spin-right 4s linear infinite;
+}
+
+@-moz-keyframes spin-right { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin-right { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin-right { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
