--- a/components/canvas.html
+++ b/components/canvas.html
@@ -12,6 +12,9 @@
                 <img ng-show="canvasCtrl.showEngineOffIcon" class="padding-top-bottom-6px border-bottom-3-white"
                      src="img/icons/engine_off_64.png" alt="{{lang.engineOff}}"
                      title="{{lang.engineOff}}">
+                <img ng-show="!canvasCtrl.socketOpened" class="padding-top-bottom-6px border-bottom-3-white"
+                     src="img/icons/socket-down.ico" alt="{{lang.engineOff}}"
+                     title="{{lang.engineOff}}">
             </div>
             <div ng-if="canvasCtrl.showAlarmsIcon || canvasCtrl.showOfflineTagsIcons || canvasCtrl.showOfflineAnchorsIcon || canvasCtrl.showEngineOffIcon" class="triangle-transparent-gray-down"></div>
         </div>
