--- a/components/outdoor-location.html
+++ b/components/outdoor-location.html
@@ -2,12 +2,12 @@
     <div layout="column" layout-align="center center" layout-wrap class="height-100-vh">
         <div layout="column" class="top-corner">
             <div layout="column" class="background-transparent-gray">
-                <img ng-show="outdoorCtrl.showAlarmsIcon" ng-click="outdoorCtrl.showAlarms()" class="pulse-image margin-bottom-5-px padding-top-bottom-6px"
+                <img ng-show="outdoorCtrl.showAlarmsIcon" ng-click="outdoorCtrl.showAlarms()" class="pulse-image margin-bottom-5-px padding-top-bottom-6px width-40px"
                      src="img/icons/alarm-icon.png" alt="{{lang.activeAllarms}}" title="{{lang.activeAllarms}}">
                 <img ng-show="outdoorCtrl.showOfflineTagsIcon" ng-click="outdoorCtrl.showOfflineTags()"
-                     class="margin-bottom-5-px padding-top-bottom-6px border-bottom-3-white border-top-3-white" src="img/icons/offline_tags_alert_64.png"
+                     class="margin-bottom-5-px padding-top-bottom-6px border-bottom-3-white border-top-3-white width-40px" src="img/icons/offline_tags_alert_64.png"
                      alt="{{lang.offlineTags}}" title="{{lang.offlineTags}}">
-                <img ng-show="outdoorCtrl.showEngineOffIcon" class="adding-top-bottom-6px border-bottom-3-white"
+                <img ng-show="outdoorCtrl.showEngineOffIcon" class="adding-top-bottom-6px width-40px spin-logo-right-no-absolute"
                      src="img/icons/engine_off_64.png" alt="{{lang.engineOff}}" title="{{lang.engineOff}}">
             </div>
             <div ng-if="outdoorCtrl.showAlarmsIcon || outdoorCtrl.showOfflineTagsIcons || outdoorCtrl.showOfflineAnchorsIcon || outdoorCtrl.showEngineOffIcon" class="triangle-transparent-gray-down"></div>
@@ -156,10 +156,10 @@
                 </md-sidenav>
             </section>
             <div ng-show="ctrlDataService.playAlarm" layout="column" layout-align="center center" class="bottom-left fadeIn">
-                <md-button ng-click="muteAlarms()" ng-class="alertButtonColor" class="md-raised background-red color-white"><div><span class="margin-right-10-px text-bold">{{lang.muteAlarm}}</span><img class="vertical-align-middle" src="img/icons/mute_alarms.png" alt=""></div></md-button>
+                <md-button ng-click="muteAlarms()" ng-class="alertButtonColor" class="md-raised background-red margin-none color-white"><div><span class="margin-right-10-px text-bold">{{lang.muteAlarm}}</span><img class="vertical-align-middle" src="img/icons/mute_alarms.png" alt=""></div></md-button>
             </div>
             <div layout="column" layout-align="center center" class="bottom-right">
-                <md-button ng-click="centerMap()" class="md-raised background-darkcyan color-white"><div><span class="margin-right-10-px text-bold">{{lang.centerMap}}</span><img class="vertical-align-middle" src="img/icons/center_map.png" alt=""></div></md-button>
+                <md-button ng-click="centerMap()" class="md-raised background-darkcyan margin-none color-white"><div><span class="margin-right-10-px text-bold">{{lang.centerMap}}</span><img class="vertical-align-middle" src="img/icons/center_map.png" alt=""></div></md-button>
             </div>
         </div>
         <!--end menu container-->
