--- a/components/tag-info-outdoor.html
+++ b/components/tag-info-outdoor.html
@@ -59,7 +59,7 @@
                 <md-list-item class="md-3-line" ng-repeat="alarm in alarms" ng-click="null">
                     <img ng-src="{{alarm.image}}" class="md-avatar" alt="{{alarm.description}}"/>
                     <div class="md-list-item-text" layout="column">
-                        <h3>{{ alarm.tag }}</h3>
+                        <h3>{{ alarm.tag }} - {{alarm.location.toUpperCase()}}</h3>
                         <h4>{{ alarm.name }}</h4>
                         <p>{{ alarm.description }}</p>
                     </div>
