--- a/css/categories_legend.css
+++ b/css/categories_legend.css
@@ -66,9 +66,9 @@ h2 {
     margin:20px 50px;
     transition:all 500ms ease;
 }
-#toggle + label:after {
-    content:"Open Legend"
-}
+/*#toggle + label:after {*/
+/*    content:"Open Legend"*/
+/*}*/
 
 .container {
     transition: margin 500ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
@@ -87,9 +87,9 @@ h2 {
     background:#dd6149;
 }
 
-#toggle:checked + label:after {
-    content:"Close Legend"
-}
+/*#toggle:checked + label:after {*/
+/*    content:"Close Legend"*/
+/*}*/
 
 .top-right-center{
     top: -24px;
