--- a/components/outdoor-location.html
+++ b/components/outdoor-location.html
@@ -9,6 +9,9 @@
                      alt="{{lang.offlineTags}}" title="{{lang.offlineTags}}">
                 <img ng-show="outdoorCtrl.showEngineOffIcon" class="adding-top-bottom-6px border-bottom-3-white"
                      src="img/icons/engine_off_64.png" alt="{{lang.engineOff}}" title="{{lang.engineOff}}">
+                <img ng-show="!outdoorCtrl.socketOpened" class="padding-top-bottom-6px border-bottom-3-white"
+                     src="img/icons/socket-down.ico" alt="{{lang.engineOff}}"
+                     title="{{lang.engineOff}}">
             </div>
             <div ng-if="outdoorCtrl.showAlarmsIcon || outdoorCtrl.showOfflineTagsIcons || outdoorCtrl.showOfflineAnchorsIcon || outdoorCtrl.showEngineOffIcon" class="triangle-transparent-gray-down"></div>
         </div>
