--- a/components/canvas.html
+++ b/components/canvas.html
@@ -22,7 +22,7 @@
         </div>
 
         <!--draw button-->
-        <div class="top-corner" ng-show="canvasCtrl.switch.showDrawing">
+        <div class="top-corner-actions" ng-show="canvasCtrl.switch.showDrawing">
             <md-fab-speed-dial md-open="canvasCtrl.speedDial.isOpen"
                                md-direction="{{canvasCtrl.speedDial.selectedDirection}}"
                                ng-class="canvasCtrl.speedDial.isOpen ? 'background-transparent-gray' : canvasCtrl.speedDial.mode">
