--- a/components/search-tag-inside.html
+++ b/components/search-tag-inside.html
@@ -14,7 +14,7 @@
 
         <div layout="column">
             <div layout="row" layout-align="center center" class="">
-                <h1 class=" font-iceberg font-x-large">{{floorData.location}} - {{floorData.floorName}}</h1>
+                <h1 class=" font-iceberg color-white font-x-large">{{floorData.location}} - {{floorData.floorName}}</h1>
             </div>
         </div>
     </md-toolbar>
