--- a/components/anchors-table.html
+++ b/components/anchors-table.html
@@ -14,7 +14,7 @@
 
         <div layout="column">
             <div layout="row" layout-align="center center" class="">
-                <h1 class=" font-iceberg font-x-large">{{lang.anchors | uppercase}}</h1>
+                <h1 class=" font-iceberg color-white font-x-large">{{lang.anchors | uppercase}}</h1>
             </div>
         </div>
     </md-toolbar>
@@ -139,7 +139,7 @@
                             title="{{lang.deleteAnchor}}"></td>
 
                 </tr>
-                <tr md-row ng-show="tableEmpty">
+                <tr md-row ng-show="anchors.length === 0">
                     <td md-cell colspan="13" class="text-center color-red">{{lang.noResultFound}}</td>
                 </tr>
                 </tbody>
