--- a/components/insert-location.html
+++ b/components/insert-location.html
@@ -65,7 +65,7 @@
             </div>
 
             <div layout="row">
-                <md-input-container ng-show="!location.isIndoor" md-no-float class="padding-left-10-px margin-bottom-0">
+                <md-input-container ng-if="!location.isIndoor" md-no-float class="padding-left-10-px margin-bottom-0">
                     <input required type="number" ng-model="location.radius" name="locationRadius"
                            placeholder="{{lang.coverInGrades}}">
                     <div ng-messages="insertLocationForm.locationRadius.$error || insertLocationForm.$submitted"
@@ -74,7 +74,7 @@
                     </div>
                 </md-input-container>
 
-                <md-input-container ng-show="!location.isIndoor" md-no-float class="padding-left-10-px margin-bottom-0">
+                <md-input-container ng-if="!location.isIndoor" md-no-float class="padding-left-10-px margin-bottom-0">
                     <input required type="number" ng-model="location.meterRadius" name="locationMeterRadius"
                            placeholder="{{lang.coverInMeters}}">
                     <div ng-messages="insertLocationForm.locationMeterRadius.$error || insertLocationForm.$submitted"
