--- a/components/outdoor-location.html
+++ b/components/outdoor-location.html
@@ -1,7 +1,7 @@
 <div ng-controller="languageController">
     <div layout="column" layout-align="center center" layout-wrap class="height-100-vh">
         <div layout="row" class="outdoor-location-name">
-            <h2 class="margin-bottom-0 font-iceberg">{{outdoorCtrl.locationName | uppercase}}</h2>
+            <h2 class="margin-bottom-0 color-white font-iceberg">{{outdoorCtrl.locationName | uppercase}}</h2>
         </div>
         <div layout="column" class="top-corner">
             <div layout="column" class="background-transparent-gray">
@@ -105,7 +105,7 @@
 
                                 <md-input-container class="margin-bottom-0 margin-top-10">
                                     <label>{{lang.searchWetag}}</label>
-                                    <md-select ng-model="selectedTag">
+                                    <md-select ng-model="selectedTag" md-on-open="getAllWetags()">
 
                                         <md-option ng-repeat="tag in menuTags" ng-value="tag.name">
                                             {{tag.name}}
