--- a/components/tags-table.html
+++ b/components/tags-table.html
@@ -14,7 +14,7 @@
 
         <div layout="column">
             <div layout="row" layout-align="center center" class="">
-                <h1 class=" font-iceberg font-x-large">WETAG</h1>
+                <h1 class=" font-iceberg color-white font-x-large">WETAG</h1>
             </div>
         </div>
     </md-toolbar>
@@ -49,12 +49,9 @@
                 <tr md-row md-select="tag" md-on-select="logItem" md-auto-select="true"
                     ng-repeat="tag in tags | orderBy: query.order | limitTo: query.limit: (query.page -1 ) * query.limit">
                     <td md-cell>
-<!--                        <img-->
-<!--                            ng-src="{{!tagsContainTag(tagsOnline, tag) ? 'img/icons/tags/offline_tag_24.png' : 'img/icons/tags/online_tag_24.png'}}"-->
-<!--                            alt="{{lang.tagState}}" title="{{lang.tagState}}"></td>-->
-                        <img ng-if="!tagHasAlarm(tag) && tagsContainTag(tagsOnline, tag)" ng-src="img/icons/tags/online_tag_24.png">
-                        <img ng-if="!tagHasAlarm(tag) && !tagsContainTag(tagsOnline, tag)" ng-src="img/icons/tags/offline_tag_24.png">
-                        <img ng-if="tagHasAlarm(tag)" ng-src="img/icons/tags/unknown_alarm.png">
+                        <img class="width-30px" ng-src="{{isTagOff(tag) ? 'img/icons/tags/shut_down_tag.png' :
+                           tagHasAlarm(tag) ? 'img/icons/tags/unknown_alarm.png' : isTagOffline(tag) ? 'img/icons/tags/offline_tag_24.png' :
+                           'img/icons/tags/online_tag_24.png'}}">
                     <td md-cell ng-click="editCell($event, tag, 'name')" ng-class="{'md-placeholder': !tag.name}">
                         {{tag.name || lang.insertName}}
                     </td>
@@ -67,27 +64,28 @@
                         </md-select>
                     </td>
                     <td md-cell><img ng-src="{{tag.battery_status ? 'img/icons/battery_empty_24.png' : 'img/icons/battery_full_24.png'}}" alt="{{lang.batteryLevel}}" title="{{lang.batteryLevel}}"></td>
-                    <td md-cell ng-show="isAdmin">
-                        <md-button ng-click="tagMacs(tag)" class="md-raised background-darkcyan color-white">
+                    <td md-cell ng-show="isAdmin" class="padding-right-10-px">
+                        <md-button ng-click="tagMacs(tag)" class="md-raised background-gray color-darkcyan margin-top-5-px">
                             {{lang.macsManaging | uppercase}}
                         </md-button>
                     </td>
-                    <td md-cell ng-show="(isAdmin)">
-                        <md-button ng-click="tagZones(tag)" class="md-raised background-darkcyan color-white">
+                    <td md-cell ng-show="(isAdmin)" class="padding-right-10-px">
+                        <md-button ng-click="tagZones(tag)" class="md-raised background-gray color-darkcyan margin-top-5-px">
                             {{lang.zonesManaging | uppercase}}
                         </md-button>
                     </td>
-                    <td md-cell ng-show="(isAdmin)">
-                        <md-button ng-click="tagParameters(tag)" class="md-raised background-darkcyan color-white">
+                    <td md-cell ng-show="(isAdmin)" class="padding-right-10-px">
+                        <md-button ng-click="tagParameters(tag)" class="md-raised background-gray color-darkcyan margin-top-5-px">
                             {{lang.parameters | uppercase}}
                         </md-button>
                     </td>
+                    <td md-cell ng-show="isAdmin" ng-click="callMe(tag)">
+                        <md-button ng-class="tagsCallMe[tag.id]['background']" class="md-raised background-gray margin-top-5-px">{{tagsCallMe[tag.id]['value']}}</md-button>
+                    </td>
                     <td md-cell ng-show="isAdmin" ng-click="deleteRow(tag)"><img src="img/icons/delete_trash_24.png"
                                                                alt="{{lang.deleteTag}}" title="{{lang.deleteTag}}"></td>
-                    <td md-cell ng-show="isAdmin" ng-click="callMe(tag)"><md-button ng-class="tagsCallMe[tag.id]['background']" class="md-raised color-white">{{tagsCallMe[tag.id]['value']}}</md-button>
-                    </td>
                 </tr>
-                <tr md-row ng-show="tableEmpty">
+                <tr md-row ng-show="tags.length === 0">
                     <td md-cell colspan="8" class="text-center color-red">{{lang.noResultFound}}</td>
                 </tr>
                 </tbody>
