--- a/css/custom.css
+++ b/css/custom.css
@@ -461,7 +461,7 @@ PADDING
 }
 
 .padding-right-10-px{
-    padding-right: 10px;
+    padding-right: 10px!important;
 }
 
 .padding-left-10-px{
@@ -570,7 +570,7 @@ COLOR
 }
 
 .color-darkred{
-    color: #E13044;
+    color: #E13044!important;
 }
 
 .color-ottanio{
@@ -587,6 +587,10 @@ COLOR
 
 .color-green{
     color: #4BAE5A!important;
+}
+
+.color-darkgreen{
+    color: #1b5e20!important;
 }
 
 .color-darkblue{
