--- a/components/tag-info.html
+++ b/components/tag-info.html
@@ -50,9 +50,13 @@
             </md-list-item>
             <md-list-item class="width-500-px">
                 <p class="float-left text-bold">{{lang.batteryLevel}}:</p>
-                <p class="float-right text-right"><img alt="{{lang.batteryStatus}}" title="{{lang.batteryStatus}}"
-                                                       aria-label="{{lang.batteryStatus}}"
-                                                       ng-src="{{tag.battery_status ? 'img/icons/battery_empty_24.png' : 'img/icons/battery_full_24.png'}}"></p>
+                <p class="float-right text-right">
+                    <img alt="{{lang.batteryStatus}}" aria-label="{{lang.batteryStatus}}"
+                         class="position-absolute right-110px top-12px"
+                         ng-src="{{tag.battery_status ? 'img/icons/battery_empty_24.png' : 'img/icons/battery_full_24.png'}}"
+                         title="{{lang.batteryStatus}}">
+                    <span class="padding-left-5-px"><b>{{tag.battery_level}}</b>%/<b>{{tag.temperature}}</b>°C</span>
+                </p>
             </md-list-item>
         </md-list>
         <md-list>
