--- a/components/tags-info.html
+++ b/components/tags-info.html
@@ -32,13 +32,39 @@
                         </p>
                     </div>
                     <md-list class="collapse" ng-class="{displaynone: collapsibleState}">
-                        <md-list-item class="width-300-px">
+                        <md-list-item class="width-500-px">
+                            <p class="float-left text-bold">{{lang.tagType}}:</p>
+                            <p class="float-right text-right">{{tag.tag_type_name}}</p>
+                        </md-list-item>
+                        <md-list-item class="width-500-px">
                             <p class="float-left text-bold">{{lang.floor}}:</p>
                             <p class="float-right text-right">{{tag.floor_name}}</p>
                         </md-list-item>
-                        <md-list-item class="width-300-px">
+                        <md-list-item class="width-500-px">
                             <p class="float-left text-bold">{{lang.anchor}}:</p>
                             <p class="float-right text-right">{{tag.anchor_name}}</p>
+                        </md-list-item>
+                        <md-list-item class="width-500-px">
+                            <p class="float-left text-bold">{{lang.time}}:</p>
+                            <p class="float-right text-right">{{tag.time}}</p>
+                        </md-list-item>
+                        <md-list-item class="width-500-px">
+                            <p class="float-left text-bold">{{lang.gpsTime}}:</p>
+                            <p class="float-right text-right">{{tag.gps_time}}</p>
+                        </md-list-item>
+                        <md-list-item class="width-500-px">
+                            <p class="float-left text-bold">{{lang.alarmTime}}:</p>
+                            <p class="float-right text-right">{{tag.alarm_time}}</p>
+                        </md-list-item>
+                        <md-list-item class="width-500-px">
+                            <p class="float-left text-bold">{{lang.batteryLevel}}:</p>
+                            <p class="float-right text-right">
+                                <img alt="{{lang.batteryStatus}}" aria-label="{{lang.batteryStatus}}"
+                                     class="position-absolute right-110px top-12px"
+                                     ng-src="{{tag.battery_status ? 'img/icons/battery_empty_24.png' : 'img/icons/battery_full_24.png'}}"
+                                     title="{{lang.batteryStatus}}">
+                                <span class="padding-left-5-px"><b>{{tag.battery_level}}</b>%/<b>{{tag.temperature}}</b>°C</span>
+                            </p>
                         </md-list-item>
                     </md-list>
                 </div>
