--- a/components/login.html
+++ b/components/login.html
@@ -7,8 +7,8 @@
             <form id="loginForm" name="loginForm">
 
                 <div layout="row" layout-align="center center">
-                    <img ng-show="showPartnerLogo" src="img/icons/rina-logo.jpg" class="margin-right-50-px"
-                         alt="Smart Track" title="Smart Track">
+                    <img alt="Smart Track" class="margin-right-50-px" ng-show="showPartnerLogo"
+                         src="img/icons/rina-logo.jpg" title="Smart Track">
                     <img src="img/icons/login-icon.png" class="avatar-image border-radius-50"
                          alt="Smart Track" title="Smart Track">
                 </div>
