--- a/components/outdoor-location.html
+++ b/components/outdoor-location.html
@@ -2,15 +2,17 @@
     <div layout="column" layout-align="center center" layout-wrap class="height-100-vh">
         <div layout="column" class="top-corner">
             <div layout="column" class="background-transparent-gray">
-                <img ng-show="outdoorCtrl.showAlarmsIcon" ng-click="outdoorCtrl.showAlarms()" class="pulse-image margin-bottom-5-px padding-top-bottom-6px"
+                <img ng-show="outdoorCtrl.showAlarmsIcon" ng-click="outdoorCtrl.showAlarms()"
+                     class="pulse-image margin-bottom-5-px padding-top-bottom-6px"
                      src="img/icons/alarm-icon.png" alt="{{lang.activeAllarms}}" title="{{lang.activeAllarms}}">
                 <img ng-show="outdoorCtrl.showOfflineTagsIcon" ng-click="outdoorCtrl.showOfflineTags()"
-                     class="margin-bottom-5-px padding-top-bottom-6px border-bottom-3-white border-top-3-white" src="img/icons/offline_tags_alert_64.png"
+                     class="margin-bottom-5-px padding-top-bottom-6px border-bottom-3-white border-top-3-white"
+                     src="img/icons/offline_tags_alert_64.png"
                      alt="{{lang.offlineTags}}" title="{{lang.offlineTags}}">
                 <img ng-show="outdoorCtrl.showEngineOffIcon" class="adding-top-bottom-6px border-bottom-3-white"
                      src="img/icons/engine_off_64.png" alt="{{lang.engineOff}}" title="{{lang.engineOff}}">
-                <img ng-show="!outdoorCtrl.socketOpened" class="padding-top-bottom-6px border-bottom-3-white"
-                     src="img/icons/socket-down.ico" alt="{{lang.engineOff}}"
+                <img alt="{{lang.engineOff}}" class="padding-top-bottom-6px border-bottom-3-white"
+                     ng-show="!outdoorCtrl.socketOpened" src="img/icons/socket-down.ico"
                      title="{{lang.engineOff}}">
             </div>
             <div ng-if="outdoorCtrl.showAlarmsIcon || outdoorCtrl.showOfflineTagsIcons || outdoorCtrl.showOfflineAnchorsIcon || outdoorCtrl.showEngineOffIcon" class="triangle-transparent-gray-down"></div>
