--- a/components/canvas.html
+++ b/components/canvas.html
@@ -2,18 +2,21 @@
     <div layout="column" layout-align="center center">
         <div layout="column" class="top-corner">
             <div layout="column" class="background-transparent-gray">
-                <img ng-show="canvasCtrl.showAlarmsIcon" ng-click="showAlarms()" class="pulse-image margin-bottom-5-px padding-top-bottom-6px"
+                <img ng-show="canvasCtrl.showAlarmsIcon" ng-click="showAlarms()"
+                     class="pulse-image margin-bottom-5-px padding-top-bottom-6px"
                      src="img/icons/alarm-icon.png" alt="{{lang.activeAllarms}}" title="{{lang.activeAllarms}}">
-                <img ng-show="canvasCtrl.showOfflineTagsIcon" ng-click="showOfflineTagsIndoor()" class="margin-bottom-5-px padding-top-bottom-6px border-bottom-3-white border-top-3-white"
+                <img ng-show="canvasCtrl.showOfflineTagsIcon" ng-click="showOfflineTagsIndoor()"
+                     class="margin-bottom-5-px padding-top-bottom-6px border-bottom-3-white border-top-3-white"
                      src="img/icons/offline_tags_alert_64.png" alt="{{lang.offlineTags}}" title="{{lang.offlineTags}}">
-                <img ng-show="canvasCtrl.showOfflineAnchorsIcon" ng-click="showOfflineAnchorsIndoor()" class="margin-bottom-5-px padding-top-bottom-6px border-bottom-3-white"
+                <img ng-show="canvasCtrl.showOfflineAnchorsIcon" ng-click="showOfflineAnchorsIndoor()"
+                     class="margin-bottom-5-px padding-top-bottom-6px border-bottom-3-white"
                      src="img/icons/offline_anchors_alert_64.png" alt="{{lang.offlineAnchors}}"
                      title="{{lang.offlineAnchors}}">
                 <img ng-show="canvasCtrl.showEngineOffIcon" class="padding-top-bottom-6px border-bottom-3-white"
                      src="img/icons/engine_off_64.png" alt="{{lang.engineOff}}"
                      title="{{lang.engineOff}}">
-                <img ng-show="!canvasCtrl.socketOpened" class="padding-top-bottom-6px border-bottom-3-white"
-                     src="img/icons/socket-down.ico" alt="{{lang.engineOff}}"
+                <img alt="{{lang.engineOff}}" class="padding-top-bottom-6px border-bottom-3-white"
+                     ng-show="!canvasCtrl.socketOpened" src="img/icons/socket-down.ico"
                      title="{{lang.engineOff}}">
             </div>
             <div ng-if="canvasCtrl.showAlarmsIcon || canvasCtrl.showOfflineTagsIcons || canvasCtrl.showOfflineAnchorsIcon || canvasCtrl.showEngineOffIcon" class="triangle-transparent-gray-down"></div>
@@ -104,18 +107,18 @@
         <!--end draw buttoon-->
 
         <!-- begin categories legend-->
-        <input ng-if="canvasCtrl.showCategoriesButton" type="checkbox" name="toggle" id="toggle" />
-        <label for="toggle" class="top-right-center">{{lang.openLegend}}</label>
+        <input id="toggle" name="toggle" ng-if="canvasCtrl.showCategoriesButton" type="checkbox"/>
+        <label class="top-right-center" for="toggle">{{lang.openLegend}}</label>
         <div class="message">
             <div class="category-title">{{lang.categoryLegend}}</div>
 
             <ul class="float-left margin-left-6">
-                <li ng-if="$even" class="category-list-item" ng-repeat="category in canvasCtrl.legend track by $index">
+                <li class="category-list-item" ng-if="$even" ng-repeat="category in canvasCtrl.legend track by $index">
                     <img class="margin-right-50-px" src="img/icons/tags/{{category.img}}">{{category.name}}
                 </li>
             </ul>
             <ul class="float-left margin-left-8">
-                <li ng-if="!$even" class="category-list-item" ng-repeat="category in canvasCtrl.legend track by $index">
+                <li class="category-list-item" ng-if="!$even" ng-repeat="category in canvasCtrl.legend track by $index">
                     <img class="margin-right-50-px" src="img/icons/tags/{{category.img}}">{{category.name}}
                 </li>
             </ul>
@@ -126,8 +129,8 @@
         <div layout="row" layout-align="center center" class="background-ottanio width-100 position-absolute top-0">
             <div id='working-zones' class="position-absolute bottom-0 width-100">
             </div>
-            <img ng-show="showPartnerLogo" src="img/icons/rina-canvas-logo.jpg" class="margin-right-50-px"
-                 alt="Smart Track" title="Smart Track">
+            <img alt="Smart Track" class="margin-right-50-px" ng-show="showPartnerLogo"
+                 src="img/icons/rina-canvas-logo.jpg" title="Smart Track">
             <img src="img/icons/login-icon.png" class="canvas-header-image" alt="Smart Track"
                  title="Smart Track">
             <div class="margin-bottom-30-px width-30">
