--- a/components/home.html
+++ b/components/home.html
@@ -7,16 +7,18 @@
                     <img ng-show="homeCtrl.showAlarmsIcon" ng-click="homeCtrl.showAlarmsHome()" class="pulse-image margin-bottom-5-px padding-top-bottom-6px"
                          src="img/icons/alarm-icon.png" alt="{{lang.activeAllarms}}" title="{{lang.activeAllarms}}">
                     <img ng-show="homeCtrl.showOfflineTagsIcon" ng-click="homeCtrl.showOfflineTagsHome()"
-                         class="margin-bottom-5-px padding-top-bottom-6px border-bottom-3-white border-top-3-white" src="img/icons/offline_tags_alert_64.png"
+                         class="margin-bottom-5-px padding-top-bottom-6px border-bottom-3-white border-top-3-white"
+                         src="img/icons/offline_tags_alert_64.png"
                          alt="{{lang.offlineTags}}" title="{{lang.offlineTags}}">
-                    <img ng-show="homeCtrl.showOfflineAnchorsIcon" ng-click="homeCtrl.showOfflineAnchorsHome()" class="margin-bottom-5-px padding-top-bottom-6px border-bottom-3-white"
+                    <img ng-show="homeCtrl.showOfflineAnchorsIcon" ng-click="homeCtrl.showOfflineAnchorsHome()"
+                         class="margin-bottom-5-px padding-top-bottom-6px border-bottom-3-white"
                          src="img/icons/offline_anchors_alert_64.png" alt="{{lang.offlineAnchors}}"
                          title="{{lang.offlineAnchors}}">
                     <img ng-show="homeCtrl.showEngineOffIcon" class="padding-top-bottom-6px border-bottom-3-white"
                          src="img/icons/engine_off_64.png" alt="{{lang.engineOff}}"
                          title="{{lang.engineOff}}">
-                    <img ng-show="!homeCtrl.socketOpened" class="padding-top-bottom-6px border-bottom-3-white"
-                         src="img/icons/socket-down.ico" alt="{{lang.engineOff}}"
+                    <img alt="{{lang.engineOff}}" class="padding-top-bottom-6px border-bottom-3-white"
+                         ng-show="!homeCtrl.socketOpened" src="img/icons/socket-down.ico"
                          title="{{lang.engineOff}}">
                 </div>
                 <div ng-if="homeCtrl.showAlarmsIcon || homeCtrl.showOfflineTagsIcons || homeCtrl.showOfflineAnchorsIcon || homeCtrl.showEngineOffIcon" class="triangle-transparent-gray-down"></div>
