--- a/components/home.html
+++ b/components/home.html
@@ -1,3 +1,4 @@
+
 <div ng-controller="languageController">
     <div layout="column" layout-align="center center" layout-wrap class="height-100-vh">
         <!--map container-->
@@ -164,10 +165,24 @@
                     </md-content>
                 </md-sidenav>
             </section>
-            <div ng-show="ctrlDataService.playAlarm" layout="column" layout-align="center center" class="fadeIn mute-alarms">
-                <md-button ng-click="muteAlarms()" ng-class="alertButtonColor" class="md-raised color-white margin-none"><div><span class="margin-right-10-px text-bold">{{lang.muteAlarm}}</span><img class="vertical-align-middle" src="img/icons/mute_alarms.png" alt=""></div></md-button>
+            <div ng-show="ctrlDataService.playAlarm" layout="column" layout-align="center center"
+                 class="fadeIn mute-alarms">
+                <md-button class="md-raised background-red margin-none color-white" ng-class="alertButtonColor"
+                           ng-click="muteAlarms()">
+                    <div><span class="margin-right-10-px text-bold">{{lang.muteAlarm}}</span><img alt=""
+                                                                                                  class="vertical-align-middle"
+                                                                                                  src="img/icons/mute_alarms.png">
+                    </div>
+                </md-button>
             </div>
         </div>
         <!--end menu container-->
+        <input id="log" name="log" ng-if="homeCtrl.debug" type="checkbox"/>
+        <label class="bottom-center" for="log"></label>
+        <div class="log-message">
+            <textarea class="log-area" id="log-area" readonly>
+
+            </textarea>
+        </div>
     </div>
 </div>
