--- a/components/home.html
+++ b/components/home.html
@@ -99,7 +99,8 @@
                                 <md-list-item ng-show="homeCtrl.isAdmin" ng-click="viewTracking('home')" class="font-smal"><p>{{lang.tracking | uppercase}}</p><img
                                         src="img/icons/menu/tracking-icon.ico" class="menu-list-icon menu-icon"
                                         alt=""></md-list-item>
-                                <md-list-item ng-show="true" ng-click="viewVersions()" class="font-smal"><p>{{lang.versions | uppercase}}</p><img
+                                <md-list-item class="font-smal" ng-click="viewVersions()" ng-show="false"><p>
+                                    {{lang.versions | uppercase}}</p><img
                                         src="img/icons/menu/version-icon.ico" class="menu-list-icon menu-icon"
                                         alt=""></md-list-item>
                                 <md-list-item ng-click="quickActions()" class="font-smal"><p>{{lang.quickActions | uppercase}}</p><img
